# imovel-match

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  real-estate-agent-flow.mermaid  requirements.txt  telegram_bot.py
app/agents/: guard_rail_agent.py  real_estate_agent.py
app/models/: guard_rail_models.py  real_estate_models.py  user_models.py
app/prompts/: guard_rail_prompts.py  real_estate_prompts.py  real_estate_prompts_dynamic.py  real_estate_prompts_fixed.py
app/scripts/: db_explorer.py  generate_slots.py  generate_test_db.py
app/tools/: real_estate_tools.py
app/utils/: general.py
backend/: agent.py  output_parsers.py  real_estate_system_prompt.py  real_estate_tools.py
config/: config.yml
tests/: send.py  tests.ipynb  tests.py
tests/notebooks/: sandbox.ipynb
