[project]
name = "imovel-match"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.0",
    "tabulate>=0.9.0",
]
